packages/llvm/src/tests/modules/snapshots/llvm__tests__modules__Main file:    import { foo } from "foo";    const y = foo(5)    Foo File:    export function foo(x : number) : number {        return x + 5;    };    .snap
---
source: packages/llvm/src/tests/modules/mod.rs
expression: main_content

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %y_ = alloca double, align 8
  %"0" = call double @foo_(double 5.000000e+00)
  store double %"0", double* %y_, align 8
  ret void
}

define double @foo_(double %0) {
main:
  %x_ = alloca double, align 8
  store double %0, double* %x_, align 8
  %"2" = load double, double* %x_, align 8
  %"1" = fadd double %"2", 5.000000e+00
  ret double %"1"
}

